Add tabs for locations and types

--- a/zubieliciousApp/www/templates/menu.html
+++ b/zubieliciousApp/www/templates/menu.html
@@ -9,9 +9,13 @@
 
   <ion-side-menu side="left">
     <header class="bar bar-header bar-stable">
-      <h1 class="title">Left</h1>
+      <div class="button-bar">
+        <a class="button" ng-click="showLocations()">Locations</a>
+        <a class="button" ng-click="showTypes()">Activities</a>
+      </div>
     </header>
     <ion-content class="has-header">
+      <!-- Activities -->
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/search">
           Search
@@ -19,10 +23,21 @@
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+        <ion-item nav-clear menu-close href="#/app/activities">
+          All Activities
+        </ion-item>
+        <ion-item ng-show="locationsActive" ng-repeat="location in locations">
+            {{location.name}}
+        </ion-item>
+        <ion-item ng-show="typesActive" ng-repeat="type in types">
+          {{type.name}}
         </ion-item>
       </ion-list>
+
+      <!-- Locations -->
+<!--       <ion-list>
+
+      </ion-list> -->
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
