--- a/zubieliciousApp/www/templates/activities.html
+++ b/zubieliciousApp/www/templates/activities.html
@@ -1,10 +1,10 @@
-<ion-view title="Playlists">
+<ion-view title="Activities">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
     <ion-list>
-      <ion-item ng-repeat="activity in activities" href="#/app/playlists/{{activity.name}}">
+      <ion-item ng-repeat="activity in activities" href="#/app/activities/{{activity.name}}">
         {{activity.name}}
       </ion-item>
     </ion-list>
