--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -1,8 +1,12 @@
-<ion-view title="Search">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
-  <ion-content class="has-header">
-    <h1>Search a Place</h1>
-  </ion-content>
-</ion-view>
+  <div ng-controller="MapCtrl">
+    <ion-header-bar class="bar-dark">
+      <h1 class="title">Map</h1>
+    </ion-header-bar>
+    <ion-content scroll="false">
+      <div id="map"></div>
+    </ion-content>
+    <ion-footer-bar class="bar-dark">
+      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>
+    </ion-footer-bar>
+  </div>
+
