--- a/zubieliciousApp/www/css/style.css
+++ b/zubieliciousApp/www/css/style.css
@@ -9,18 +9,39 @@
   box-shadow: 1px 1px 10px #efefef;
 }
 
+.act-image {
+  width: 100%;
+  height: 75px;
+}
+
+.act-name {
+  color: rgb(231, 136, 32);
+  display: block;
+}
+
+.act-quote {
+  color: #ddd;
+  display: block;
+  white-space: normal;
+}
+
 .typeHeading {
   height: 50px;
   display: inline-block;
   background-color: rgba(129,255,129, 0.8);
 }
 
+.typeIconBg {
+  float: left;
+  margin-right: 10px;
+}
+
 .typeWrapper {
   padding: 0;
 }
 
-.typeHeading h2 {
-  font-size: 2em;
+.typeHeading > h2 {
+  font-size: 2em !important;
 }
 #map {
   width: 100%;
@@ -30,3 +51,4 @@
 .scroll {
   height: 100%;
 }
+
