--- a/zubieliciousApp/www/css/style.css
+++ b/zubieliciousApp/www/css/style.css
@@ -1,47 +1,124 @@
 /* Empty. Add your own CSS if you like */
+@font-face {
+    font-family: 'GearedSlab';
+      src: url('/fonts/GearedSlab.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Futura';
+  src: url('/fonts/ufonts.com_futura_lt_bold_1_.ttf');
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'GearedSlab' !important;
+}
+
 .activityBlock {
-  height: 200px;
-  padding: 10px;
+  height: 175px;
   font-weight: 400;
   border: 1px solid #c4c4c4;
   border-radius: 6px;
-  margin: 5px auto;
+  margin: 5px;
   box-shadow: 1px 1px 10px #efefef;
+  transition: height 250ms ease;
+  -webkit-transition: height 250ms ease;
 }
 
-.act-image {
+.activityBlockHide {
+  height: 0;
+  margin: -4px !important;
+    transition: height 250ms ease;
+  -webkit-transition: height 250ms ease;
+}
+
+.zArrow {
+ display: inline-block;
+  background: url(/img/Arrow.png) no-repeat;
+  width: 30px;
+  height: 30px;
+  float: right;
+  position: relative;
+  bottom: 40px;
+  right: 10px;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+    -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+}
+
+.zArrowDown {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+  -webkit-transition: all 500ms linear;
+  transition: all 500ms linear;
+}
+
+.headerLogo {
+  height: auto;
+width: 100%;
+z-index: 11;
+position: relative;
+}
+
+.act-image img{
   width: 100%;
-  height: 75px;
+  display: block;
 }
 
 .act-name {
   color: rgb(231, 136, 32);
   display: block;
+  font-weight: 600;
+  font-family: 'Futura';
+  margin-left: 3px;
 }
 
 .act-quote {
   color: #ddd;
   display: block;
-  white-space: normal;
+  white-space: nowrap;
+  margin-left: 3px;
+  font-size: 14px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.act-rating {
+  width: 20px;
+  height: 40px;
+  display: inline;
+  margin-left: 3px;
+}
+
+.faded {
+  opacity: 0.5;
 }
 
 .typeHeading {
   height: 50px;
   display: inline-block;
-  background-color: rgba(129,255,129, 0.8);
+  width: 100%;
+  box-shadow: 0 1px 3px #efefef;
 }
 
 .typeIconBg {
   float: left;
   margin-right: 10px;
+  width: 50px;
+  height: 50px;
 }
 
 .typeWrapper {
   padding: 0;
 }
 
+.typeWrapper .item-content {
+  padding: 0px !important;
+}
+
 .typeHeading > h2 {
   font-size: 2em !important;
+  padding-top: 10px;
 }
 #map {
   width: 100%;
