--- a/zubieliciousApp/platforms/android/assets/www/templates/menu.html
+++ b/zubieliciousApp/platforms/android/assets/www/templates/menu.html
@@ -7,11 +7,12 @@
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" width="350" is-enabled="true">
+    <img class="headerLogo" ng-src="/img/list_Header.png" />
     <header class="bar bar-header bar-stable">
-      <h1>Activities</h1>
+
     </header>
-    <ion-content class="has-header">
+    <ion-content class="has-header" ng-style="{'margin-top':'35px'}">
       <!-- Activities -->
       <ion-list>
 <!--         <ion-item nav-clear menu-close href="#/app/search">
@@ -23,15 +24,18 @@
         <ion-item nav-clear menu-close href="#/app/activities">
           All Activities
         </ion-item>
-        <ion-item ng-repeat="type in types">
-          {{type.name}}
+        <ion-item class="typeWrapper" ng-repeat="type in types" >
+          <div class="typeHeading" ng-click="show = !show"><span class="typeIconBg"></span><h2>{{type.name | uppercase}}</h2><span class="zArrow" ng-class="{'zArrowDown':show}"></span></div>
+          <div >
+            <div class="activityBlock" ng-class="{'activityBlockHide':!show}" ng-repeat="item in activities | filter:{type: type.name}:true" ng-click="selectActivity(item)">
+              <span class="act-image"><img ng-src="/img/huntImg1.png" /></span>
+              <span class="act-name">{{item.name | uppercase}}</span>
+              <span class="act-quote">"{{item.quote}}"</span>
+              <span class="act-rating"> <img ng-src="/img/ratingStar.png" ng-repeat="s in range(item.rating) track by $index" /></span>
+            </div>
+          </div>
         </ion-item>
       </ion-list>
-
-      <!-- Locations -->
-<!--       <ion-list>
-
-      </ion-list> -->
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
