--- a/zubieliciousApp/platforms/android/res/xml/config.xml
+++ b/zubieliciousApp/platforms/android/res/xml/config.xml
@@ -12,7 +12,7 @@
         An Ionic Framework and Cordova project.
     </description>
     <author email="hi@ionicframework" href="http://ionicframework.com/">
-      Ionic Framework Team
+      Ionic Framework Team and Zubielicious
     </author>
     <content src="index.html" />
     <access origin="*" />
