--- a/zubieliciousApp/www/css/style.css
+++ b/zubieliciousApp/www/css/style.css
@@ -120,12 +120,8 @@ position: relative;
   font-size: 2em !important;
   padding-top: 10px;
 }
-#map {
-  width: 100%;
-  height: 100%;
-}
-
-.scroll {
-  height: 100%;
+.angular-google-map-container {
+  height: 800px;
+  width: 800px;
 }
 
