--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -1,5 +1,5 @@
-<view title="navTitle" hide-back-button="true" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="true">
-    <content has-header="true" padding="true">
+<ion-view title="navTitle" hide-back-button="true" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="true">
+    <ion-content has-header="true" padding="true">
 
     <div class="google-map span7"
          center="map.center"
@@ -16,5 +16,5 @@
     <pre>
       {{ map }}
     </pre>
-    </content>
-</view>
+    </ion-content>
+</ion-view>
