--- a/zubieliciousApp/www/templates/menu.html
+++ b/zubieliciousApp/www/templates/menu.html
@@ -21,9 +21,9 @@
         <ion-item nav-clear menu-close href="#/app/browse">
           Browse
         </ion-item> -->
-        <ion-item nav-clear menu-close href="#/app/activities">
+<!--         <ion-item nav-clear menu-close href="#/app/activities">
           All Activities
-        </ion-item>
+        </ion-item> -->
         <ion-item class="typeWrapper" ng-repeat="type in types" >
           <div class="typeHeading" ng-click="show = !show"><span class="typeIconBg"></span><h2>{{type.name | uppercase}}</h2><span class="zArrow" ng-class="{'zArrowDown':show}"></span></div>
           <div >
