--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -1,6 +1,8 @@
-<ion-view title="navTitle" hide-back-button="true" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="true">
-    <ion-content has-header="true" padding="true">
 
+<ion-view title="Map" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
+
+    <ion-content has-header="true" padding="true">
+<span class="locationHeader" ng-repeat="location in locations">{{location.name}}</span>
     <div class="google-map span7"
          center="map.center"
          zoom="map.zoom"
