--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -1,8 +1,8 @@
 
 <ion-view title="Map" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
 
-    <ion-content has-header="true" padding="true">
-<span class="locationHeader" ng-repeat="location in locations">{{location.name}}</span>
+    <ion-content has-header="false" padding="true">
+      <div class="locationHeaderWrapper"><span class="locationHeader" ng-repeat="place in map.places" ng-class="{'active-loc': selectedLocation === place}" ng-click="selectLocation(place)">{{place.title | uppercase}}</span></div>
     <div class="google-map span7"
          center="map.center"
          zoom="map.zoom"
@@ -13,10 +13,13 @@
          options="map.options"
          pan="true"
          control="map.control">
-            <markers models="map.markers" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
+            <markers models="map.places" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
     </div>
     <pre>
-      {{ map }}
+     <!--  {{ map }} -->
     </pre>
+    <div class="detail-box">
+      {{selectedLocation.title}}
+    </div>
     </ion-content>
-</ion-view>
+<!-- </ion-view> -->
