--- a/zubieliciousApp/platforms/android/assets/www/lib/ionic/css/style.css
+++ b/zubieliciousApp/platforms/android/assets/www/lib/ionic/css/style.css
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .activityBlock {
-  height: 175px;
+  height: 215px;
   font-weight: 400;
   border: 1px solid #c4c4c4;
   border-radius: 6px;
@@ -120,12 +120,40 @@ position: relative;
   font-size: 2em !important;
   padding-top: 10px;
 }
-#map {
+.angular-google-map-container {
+/*  height: 600px;
+  width: 960px;*/
+  width: calc(100% - 10px);
+  margin: 0 auto;
+  height: 800px;
+}
+
+.locationHeader {
+  display: inline;
+  width: auto;
+  margin: 0 10px;
+  color: #8da6a1;
+  font-family: 'Futura';
+  font-weight: 600;
+  font-size: 1em;
+  line-height: 2.5em;
+}
+
+.locationHeaderWrapper {
+  display: inline-block;
+  background: url(/img/TopNav.png) no-repeat;
+  height: 40px;
   width: 100%;
-  height: 100%;
+  box-shadow: 0 3px 4px #595959;
 }
 
-.scroll {
-  height: 100%;
+.active-loc {
+  color: #f5f5ec;
+  border-bottom: 4px solid #f5f5ec;
 }
 
+.detail-box {
+  background-color: #ededed;
+  height: 200px;
+  width: 100%;
+}
