Trying to add the Intro
Doesn’t work right now

--- a/zubieliciousApp/www/templates/menu.html
+++ b/zubieliciousApp/www/templates/menu.html
@@ -27,8 +27,8 @@
         <ion-item class="typeWrapper" ng-repeat="type in types" >
           <div class="typeHeading" ng-click="show = !show"><span class="typeIconBg"></span><h2>{{type.name | uppercase}}</h2><span class="zArrow" ng-class="{'zArrowDown':show}"></span></div>
           <div >
-            <div class="activityBlock" ng-class="{'activityBlockHide':!show}" ng-repeat="item in activities | filter:{type: type.name}:true" ng-click="selectActivity(item)">
-              <span class="act-image"><img ng-src="/img/huntImg1.png" /></span>
+            <div class="activityBlock" ng-class="{'activityBlockHide':show}" ng-repeat="item in activities | filter:{type: type.name}:true" ng-click="selectActivity(item)">
+              <span class="act-image"><img ng-src="{{item.img}}" /></span>
               <span class="act-name">{{item.name | uppercase}}</span>
               <span class="act-quote">"{{item.quote}}"</span>
               <span class="act-rating"> <img ng-src="/img/ratingStar.png" ng-repeat="s in range(item.rating) track by $index" /></span>
