--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -15,12 +15,12 @@
             <markers models="map.places" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
                         <markers models="map.activities" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
     </div>
-    <div class="detail-box" ng-show="selectedLocation">
+    <!--<div class="detail-box" ng-show="selectedLocation">
       <h2>{{selectedLocation.title}}</h2>
     </div>
         <div class="detail-box" ng-show="theActivity">
       <h2>{{theActivity.name}}</h2>
-    </div>
+    </div>-->
 
 
     </ion-content>
