--- a/zubieliciousApp/www/templates/search.html
+++ b/zubieliciousApp/www/templates/search.html
@@ -1,4 +1,4 @@
-<ion-view title="Map" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
+<ion-view title="" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
 
     <ion-content has-header="false" padding="true">
       <div class="locationHeaderWrapper"><span class="locationHeader" ng-repeat="place in map.places" ng-class="{'active-loc': selectedLocation === place}" ng-click="selectLocation(place)">{{place.title | uppercase}}</span></div>
