--- a/zubieliciousApp/platforms/ios/www/lib/ionic/css/style.css
+++ b/zubieliciousApp/platforms/ios/www/lib/ionic/css/style.css
@@ -10,11 +10,11 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'GearedSlab' !important;
+  font-family: 'Futura' !important;
 }
 
 .activityBlock {
-  height: 215px;
+  height: 250px;
   font-weight: 400;
   border: 1px solid #c4c4c4;
   border-radius: 6px;
@@ -38,12 +38,30 @@ h1, h2, h3, h4, h5, h6 {
   height: 30px;
   float: right;
   position: relative;
-  bottom: 40px;
+  bottom: 30px;
   right: 10px;
   -webkit-transform: rotate(0deg);
   transform: rotate(0deg);
     -webkit-transition: all 500ms linear;
   transition: all 500ms linear;
+}
+.fish {
+  display: inline-block;
+  background: url(/img/banner_Fishing.png);
+  width: 75px;
+  height: 85px;
+}
+.kayak {
+  display: inline-block;
+  background: url(/img/banner_Surfing.png);
+  width: 75px;
+  height: 85px;
+}
+.walk {
+  display: inline-block;
+  background: url(/img/banner_Sightseeing.png);
+  width: 75px;
+  height: 85px;
 }
 
 .zArrowDown {
@@ -70,15 +88,19 @@ position: relative;
   display: block;
   font-weight: 600;
   font-family: 'Futura';
-  margin-left: 3px;
+  margin-left: 5px;
+  font-size: 22px;
+  margin-top: 5px;
 }
 
 .act-quote {
-  color: #ddd;
+  color: #666f73;
   display: block;
   white-space: nowrap;
-  margin-left: 3px;
-  font-size: 14px;
+  margin-left: 5px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  font-size: 17px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -87,7 +109,7 @@ position: relative;
   width: 20px;
   height: 40px;
   display: inline;
-  margin-left: 3px;
+  margin-left: 5px;
 }
 
 .faded {
@@ -95,7 +117,7 @@ position: relative;
 }
 
 .typeHeading {
-  height: 50px;
+  height: 90px;
   display: inline-block;
   width: 100%;
   box-shadow: 0 1px 3px #efefef;
@@ -103,9 +125,10 @@ position: relative;
 
 .typeIconBg {
   float: left;
-  margin-right: 10px;
-  width: 50px;
-  height: 50px;
+margin: 0 10px 0 2px;
+width: 75px;
+height: 85px;
+position: relative;
 }
 
 .typeWrapper {
@@ -117,15 +140,16 @@ position: relative;
 }
 
 .typeHeading > h2 {
-  font-size: 2em !important;
-  padding-top: 10px;
+  font-size: 1.7em !important;
+  padding-top: 25px;
 }
 .angular-google-map-container {
 /*  height: 600px;
   width: 960px;*/
-  width: calc(100% - 10px);
-  margin: 0 auto;
-  height: 800px;
+  /*width: calc(100% - 10px);*/
+  width: 1900px;
+  /*margin: 0 auto;*/
+  height: 1080px;
 }
 
 .locationHeader {
@@ -135,14 +159,14 @@ position: relative;
   color: #8da6a1;
   font-family: 'Futura';
   font-weight: 600;
-  font-size: 1em;
+  font-size: 1.5em;
   line-height: 2.5em;
 }
 
 .locationHeaderWrapper {
   display: inline-block;
   background: url(/img/TopNav.png) no-repeat;
-  height: 40px;
+  height: 60px;
   width: 100%;
   box-shadow: 0 3px 4px #595959;
 }
@@ -156,4 +180,10 @@ position: relative;
   background-color: #ededed;
   height: 200px;
   width: 100%;
+}
+
+.edgeLoad-EDGE-28597010 { visibility:hidden; }
+
+.view > ion-nav-bar {
+  display: none;
 }
