--- a/zubieliciousApp/platforms/ios/www/templates/menu.html
+++ b/zubieliciousApp/platforms/ios/www/templates/menu.html
@@ -12,7 +12,7 @@
     <header class="bar bar-header bar-stable">
 
     </header>
-    <ion-content class="has-header" ng-style="{'margin-top':'75px'}">
+    <ion-content class="has-header" ng-style="{'margin-top':'66px'}">
       <!-- Activities -->
       <ion-list>
 <!--         <ion-item nav-clear menu-close href="#/app/search">
@@ -25,10 +25,10 @@
           All Activities
         </ion-item> -->
         <ion-item class="typeWrapper" ng-repeat="type in types" >
-          <div class="typeHeading" ng-click="show = !show"><span class="typeIconBg"></span><h2>{{type.name | uppercase}}</h2><span class="zArrow" ng-class="{'zArrowDown':show}"></span></div>
+          <div class="typeHeading" ng-click="show = !show"><span class="typeIconBg" ng-class="{'fish': type.name == 'Fishing', 'walk':type.name == 'Walking Trails', 'kayak': type.name == 'Kayaking'}"></span><h2>{{type.name | uppercase}}</h2><span class="zArrow" ng-class="{'zArrowDown':!show}"></span></div>
           <div >
-            <div class="activityBlock" ng-class="{'activityBlockHide':!show}" ng-repeat="item in activities | filter:{type: type.name}:true" ng-click="selectActivity(item)">
-              <span class="act-image"><img ng-src="/img/huntImg1.png" /></span>
+            <div class="activityBlock" ng-class="{'activityBlockHide':show}" ng-repeat="item in activities | filter:{type: type.name}:true" ng-click="selectActivity(item)">
+              <span class="act-image"><img ng-src="{{item.img}}" /></span>
               <span class="act-name">{{item.name | uppercase}}</span>
               <span class="act-quote">"{{item.quote}}"</span>
               <span class="act-rating"> <img ng-src="/img/ratingStar.png" ng-repeat="s in range(item.rating) track by $index" /></span>
