--- a/zubieliciousApp/platforms/ios/www/templates/search.html
+++ b/zubieliciousApp/platforms/ios/www/templates/search.html
@@ -1,4 +1,4 @@
-<ion-view title="Map" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
+<ion-view title="" hide-back-button="false" left-buttons="leftButtons" right-buttons="rightButtons" hide-back-button="false">
 
     <ion-content has-header="false" padding="true">
       <div class="locationHeaderWrapper"><span class="locationHeader" ng-repeat="place in map.places" ng-class="{'active-loc': selectedLocation === place}" ng-click="selectLocation(place)">{{place.title | uppercase}}</span></div>
@@ -15,12 +15,12 @@
             <markers models="map.places" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
                         <markers models="map.activities" coords="'self'" icon="'icon'" click="'onClicked'"></markers>
     </div>
-    <div class="detail-box" ng-show="selectedLocation">
+    <!--<div class="detail-box" ng-show="selectedLocation">
       <h2>{{selectedLocation.title}}</h2>
     </div>
         <div class="detail-box" ng-show="theActivity">
       <h2>{{theActivity.name}}</h2>
-    </div>
+    </div>-->
 
 
     </ion-content>
